--- a/TestMonoGame/TestMonoGame.csproj
+++ b/TestMonoGame/TestMonoGame.csproj
@@ -196,6 +196,9 @@
     <None Include="Content\Elements\Spring.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Content\Elements\SpecGate.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
